@@ -118,6 +118,17 @@ class IpgTest < Test::Unit::TestCase
     assert_success response
   end
 
+  def test_successful_purchase_with_store_id
+    response = stub_comms do
+      @gateway.purchase(@amount, @credit_card, @options.merge({ store_id: '1234' }))
+    end.check_request do |_endpoint, data, _headers|
+      doc = REXML::Document.new(data)
+      assert_match('1234', REXML::XPath.first(doc, '//v1:StoreId').text)
+    end.respond_with(successful_purchase_response)
+
+    assert_success response
+  end
+
   def test_successful_purchase_with_payment_token
     payment_token = 'ABC123'
 
