@@ -24,6 +24,7 @@
 * Alelo: Trigger access token refresh on 404 [curiousepic] #4614
 * DLocal: Add Network Tokens [gasb150] #4608
 * Redsys: enable NTID generation with zero-value verify [jcreiff] #4615
+* IPG: Add support for passing in `store_id` on transactions [aenand] #4619
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
